Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -248,52 +248,52 @@
 <li><a href="https://github.com/Rafase282/My-FreeCodeCamp-Code/wiki/Waypoint-Assignment-with-Divided-by-Equals">Waypoint: Assignment with Divided by Equals</a></li>
 <li><a href="https://github.com/Rafase282/My-FreeCodeCamp-Code/wiki/Checkpoint-Convert-Celsius-to-Fahrenheit">Checkpoint: Convert Celsius to Fahrenheit</a></li>
 <li><a href="https://github.com/Rafase282/My-FreeCodeCamp-Code/wiki/Basic-JavaScript#declare-string-variables">Waypoint: Declare String Variables</a></li>
-<li>Waypoint: Escaping Literal Quotes in Strings</li>
-<li>Waypoint: Quoting Strings with Single Quotes</li>
-<li>Waypoint: Escape Sequences in Strings</li>
-<li>Waypoint: Concatenating Strings with Plus Operator</li>
-<li>Waypoint: Concatenating Strings with the Plus Equals Operator</li>
-<li>Waypoint: Constructing Strings with Variables</li>
-<li>Waypoint: Appending Variables to Strings</li>
+<li><a href="https://github.com/Rafase282/My-FreeCodeCamp-Code/wiki/Waypoint-Escaping-Literal-Quotes-in-Strings">Waypoint: Escaping Literal Quotes in Strings</a></li>
+<li><a href="https://github.com/Rafase282/My-FreeCodeCamp-Code/wiki/Waypoint-Quoting-Strings-with-Single-Quotes">Waypoint: Quoting Strings with Single Quotes</a></li>
+<li><a href="https://github.com/Rafase282/My-FreeCodeCamp-Code/wiki/Waypoint-Escape-Sequences-in-Strings">Waypoint: Escape Sequences in Strings</a></li>
+<li><a href="https://github.com/Rafase282/My-FreeCodeCamp-Code/wiki/Waypoint-Concatenating-Strings-with-Plus-Operator">Waypoint: Concatenating Strings with Plus Operator</a></li>
+<li><a href="https://github.com/Rafase282/My-FreeCodeCamp-Code/wiki/Waypoint-Concatenating-Strings-with-the-Plus-Equals-Operator">Waypoint: Concatenating Strings with the Plus Equals Operator</a></li>
+<li><a href="https://github.com/Rafase282/My-FreeCodeCamp-Code/wiki/Waypoint-Constructing-Strings-with-Variables">Waypoint: Constructing Strings with Variables</a></li>
+<li><a href="https://github.com/Rafase282/My-FreeCodeCamp-Code/wiki/Waypoint-Appending-Variables-to-Strings">Waypoint: Appending Variables to Strings</a></li>
 <li><a href="https://github.com/Rafase282/My-FreeCodeCamp-Code/wiki/Waypoint-Find-the-Length-of-a-String">Waypoint: Find the Length of a String</a></li>
 <li><a href="https://github.com/Rafase282/My-FreeCodeCamp-Code/wiki/Waypoint-Use-Bracket-Notation-to-Find-the-First-Character-in-a-String">Waypoint: Use Bracket Notation to Find the First Character in a String</a></li>
-<li>Waypoint: Understand String Immutability</li>
+<li><a href="https://github.com/Rafase282/My-FreeCodeCamp-Code/wiki/Waypoint-Understand-String-Immutability">Waypoint: Understand String Immutability</a></li>
 <li><a href="https://github.com/Rafase282/My-FreeCodeCamp-Code/wiki/Waypoint-Use-Bracket-Notation-to-Find-the-Nth-Character-in-a-String">Waypoint: Use Bracket Notation to Find the Nth Character in a String</a></li>
 <li><a href="https://github.com/Rafase282/My-FreeCodeCamp-Code/wiki/Waypoint-Use-Bracket-Notation-to-Find-the-Last-Character-in-a-String">Waypoint: Use Bracket Notation to Find the Last Character in a String</a></li>
 <li><a href="https://github.com/Rafase282/My-FreeCodeCamp-Code/wiki/Waypoint-Use-Bracket-Notation-to-Find-the-Nth-to-Last-Character-in-a-String">Waypoint: Use Bracket Notation to Find the Nth-to-Last Character in a String</a></li>
-<li>Checkpoint: Word Blanks</li>
+<li><a href="https://github.com/Rafase282/My-FreeCodeCamp-Code/wiki/Checkpoint-Word-Blanks">Checkpoint: Word Blanks</a></li>
 <li><a href="https://github.com/Rafase282/My-FreeCodeCamp-Code/wiki/Waypoint-Store-Multiple-Values-in-one-Variable-using-JavaScript-Arrays">Waypoint: Store Multiple Values in one Variable using JavaScript Arrays</a></li>
 <li><a href="https://github.com/Rafase282/My-FreeCodeCamp-Code/wiki/Waypoint-Nest-one-Array-within-Another-Array">Waypoint: Nest one Array within Another Array</a></li>
 <li><a href="https://github.com/Rafase282/My-FreeCodeCamp-Code/wiki/Waypoint-Access-Array-Data-with-Indexes">Waypoint: Access Array Data with Indexes</a></li>
 <li><a href="https://github.com/Rafase282/My-FreeCodeCamp-Code/wiki/Waypoint-Modify-Array-Data-With-Indexes">Waypoint: Modify Array Data With Indexes</a></li>
-<li>Waypoint: Access Multi-Dimensional Arrays With Indexes</li>
+<li><a href="https://github.com/Rafase282/My-FreeCodeCamp-Code/wiki/Waypoint-Access-Multi-Dimensional-Arrays-With-Indexes">Waypoint: Access Multi-Dimensional Arrays With Indexes</a></li>
 <li><a href="https://github.com/Rafase282/My-FreeCodeCamp-Code/wiki/Waypoint-Manipulate-Arrays-With-push()">Waypoint: Manipulate Arrays With push()</a></li>
 <li><a href="https://github.com/Rafase282/My-FreeCodeCamp-Code/wiki/Waypoint-Manipulate-Arrays-With-pop()">Waypoint: Manipulate Arrays With pop()</a></li>
 <li><a href="https://github.com/Rafase282/My-FreeCodeCamp-Code/wiki/Waypoint-Manipulate-Arrays-With-shift()">Waypoint: Manipulate Arrays With shift()</a></li>
 <li><a href="https://github.com/Rafase282/My-FreeCodeCamp-Code/wiki/Waypoint-Manipulate-Arrays-With-unshift()">Waypoint: Manipulate Arrays With unshift()</a></li>
 <li>Checkpoint: Shopping List</li>
 <li><a href="https://github.com/Rafase282/My-FreeCodeCamp-Code/wiki/Waypoint-Write-Reusable-JavaScript-with-Functions">Waypoint: Write Reusable JavaScript with Functions</a></li>
-<li>Waypoint: Passing Values to Functions with Arguments</li>
-<li>Waypoint: Global Scope and Functions Incomplete</li>
-<li>Waypoint: Local Scope and Functions</li>
-<li>Waypoint: Global vs. Local Scope in Functions</li>
-<li>Waypoint: Return a Value from a Function with Return</li>
-<li>Waypoint: Assignment with a Returned Value</li>
+<li><a href="https://github.com/Rafase282/My-FreeCodeCamp-Code/wiki/Waypoint-Passing-Values-To-Functions-With-Arguments">Waypoint: Passing Values to Functions with Arguments</a></li>
+<li><a href="https://github.com/Rafase282/My-FreeCodeCamp-Code/wiki/Waypoint-Global-Scope-And-Functions">Waypoint: Global Scope and Functions</a></li>
+<li><a href="https://github.com/Rafase282/My-FreeCodeCamp-Code/wiki/Waypoint-Local-Scope-And-Functions">Waypoint: Local Scope and Functions</a></li>
+<li><a href="https://github.com/Rafase282/My-FreeCodeCamp-Code/wiki/Waypoint-Global-Vs-Local-Scope-In-Functions">Waypoint: Global vs. Local Scope in Functions</a></li>
+<li><a href="https://github.com/Rafase282/My-FreeCodeCamp-Code/wiki/Waypoint-Return-A-Value-From-A-Function-With-Return">Waypoint: Return a Value from a Function with Return</a></li>
+<li><a href="https://github.com/Rafase282/My-FreeCodeCamp-Code/wiki/Waypoint-Assignment-With-A-Returned-Value">Waypoint: Assignment with a Returned Value</a></li>
 <li>Checkpoint: Stand in Line</li>
 <li><a href="https://github.com/Rafase282/My-FreeCodeCamp-Code/wiki/Waypoint-Use-Conditional-Logic-with-If-Statements">Waypoint: Use Conditional Logic with If Statements</a></li>
-<li>Waypoint: Comparison with the Equality Operator</li>
-<li>Waypoint: Comparison with the Strict Equality Operator</li>
-<li>Waypoint: Comparison with the Inequality Operator</li>
-<li>Waypoint: Comparison with the Strict Inequality Operator</li>
-<li>Waypoint: Comparison with the Greater Than Operator</li>
-<li>Waypoint: Comparison with the Greater Than Equal To Operator</li>
-<li>Waypoint: Comparison with the Less Than Operator</li>
-<li>Waypoint: Comparison with the Less Than Equal To Operator</li>
-<li>Waypoint: Comparisons with the Logical And Operator</li>
-<li>Waypoint: Comparisons with the Logical Or Operator</li>
-<li>Waypoint: Introducing Else Statements</li>
-<li>Waypoint: Introducing Else If Statements</li>
-<li>Waypoint: Chaining If Else Statements</li>
+<li><a href="https://github.com/Rafase282/My-FreeCodeCamp-Code/wiki/Waypoint-Comparison-With-The-Equality-Operator">Waypoint: Comparison with the Equality Operator</a></li>
+<li><a href="https://github.com/Rafase282/My-FreeCodeCamp-Code/wiki/Waypoint-Comparison-With-The-Strict-Equality-Operator">Waypoint: Comparison with the Strict Equality Operator</a></li>
+<li><a href="https://github.com/Rafase282/My-FreeCodeCamp-Code/wiki/Waypoint-Comparison-With-The-Inequality-Operator">Waypoint: Comparison with the Inequality Operator</a></li>
+<li><a href="https://github.com/Rafase282/My-FreeCodeCamp-Code/wiki/Waypoint-Comparison-With-The-Strict-Inequality-Operator">Waypoint: Comparison with the Strict Inequality Operator</a></li>
+<li><a href="https://github.com/Rafase282/My-FreeCodeCamp-Code/wiki/Waypoint-Comparison-With-The-Greater-Than-Operator">Waypoint: Comparison with the Greater Than Operator</a></li>
+<li><a href="https://github.com/Rafase282/My-FreeCodeCamp-Code/wiki/Waypoint-Comparison-With-The-Greater-Than-Equal-To-Operator">Waypoint: Comparison with the Greater Than Equal To Operator</a></li>
+<li><a href="https://github.com/Rafase282/My-FreeCodeCamp-Code/wiki/Waypoint-Comparison-With-The-Less-Than-Operator">Waypoint: Comparison with the Less Than Operator</a></li>
+<li><a href="https://github.com/Rafase282/My-FreeCodeCamp-Code/wiki/Waypoint-Comparison-With-The-Less-Than-Equal-To-Operator">Waypoint: Comparison with the Less Than Equal To Operator</a></li>
+<li><a href="https://github.com/Rafase282/My-FreeCodeCamp-Code/wiki/Waypoint-Comparisons-With-The-Logical-And-Operator">Waypoint: Comparisons with the Logical And Operator</a></li>
+<li><a href="https://github.com/Rafase282/My-FreeCodeCamp-Code/wiki/Waypoint-Comparisons-With-The-Logical-Or-Operator">Waypoint: Comparisons with the Logical Or Operator</a></li>
+<li><a href="https://github.com/Rafase282/My-FreeCodeCamp-Code/wiki/Waypoint-Introducing-Else-Statements">Waypoint: Introducing Else Statements</a></li>
+<li><a href="https://github.com/Rafase282/My-FreeCodeCamp-Code/wiki/Waypoint-Introducing-Else-If-Statements">Waypoint: Introducing Else If Statements</a></li>
+<li><a href="https://github.com/Rafase282/My-FreeCodeCamp-Code/wiki/Waypoint-Chaining-If-Else-Statements">Waypoint: Chaining If Else Statements</a></li>
 <li>Checkpoint: Golf Code</li>
 <li><a href="https://github.com/Rafase282/My-FreeCodeCamp-Code/wiki/Waypoint-Selecting-From-Many-Options-With-Switch-Statements">Waypoint: Selecting from many options with Switch Statements</a></li>
 <li><a href="https://github.com/Rafase282/My-FreeCodeCamp-Code/wiki/Waypoint-Adding-A-Default-Option-In-Switch-Statements">Waypoint: Adding a default option in Switch statements</a></li>
@@ -314,7 +314,7 @@
 <li><a href="https://github.com/Rafase282/My-FreeCodeCamp-Code/wiki/Waypoint-Introducing-Javascript-Object-Notation-Json">Waypoint: Introducing JavaScript Object Notation (JSON)</a></li>
 <li><a href="https://github.com/Rafase282/My-FreeCodeCamp-Code/wiki/Waypoint-Accessing-Nested-Objects-In-JSON">Waypoint: Accessing Nested Objects in JSON</a></li>
 <li><a href="https://github.com/Rafase282/My-FreeCodeCamp-Code/wiki/Waypoint-Accessing-Nested-Arrays-In-JSON">Waypoint: Accessing Nested Arrays in JSON</a></li>
-<li>Checkpoint: Record Collection Incomplete</li>
+<li>Checkpoint: Record Collection</li>
 <li><a href="https://github.com/Rafase282/My-FreeCodeCamp-Code/wiki/Waypoint-Iterate-with-JavaScript-For-Loops">Waypoint: Iterate with JavaScript For Loops</a></li>
 <li><a href="https://github.com/Rafase282/My-FreeCodeCamp-Code/wiki/Waypoint-Iterate-Odd-Numbers-With-a-For-Loop">Waypoint: Iterate Odd Numbers With a For Loop</a></li>
 <li><a href="https://github.com/Rafase282/My-FreeCodeCamp-Code/wiki/Waypoint-Count-Backwards-With-a-For-Loop">Waypoint: Count Backwards With a For Loop</a></li>
