Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -283,7 +283,7 @@
 <li><a href="https://github.com/Rafase282/My-FreeCodeCamp-Code/wiki/Lesson-Replacing-If-Else-Chains-With-Switch">Lesson: Replacing If Else Chains with Switch</a></li>
 <li><a href="https://github.com/Rafase282/My-FreeCodeCamp-Code/wiki/Lesson-Returning-Boolean-Values-From-Functions">Lesson: Returning Boolean Values from Functions</a></li>
 <li><a href="https://github.com/Rafase282/My-FreeCodeCamp-Code/wiki/Lesson-Return-Early-Pattern-For-Functions">Lesson: Return Early Pattern for Functions</a></li>
-<li>Lesson Review: Counting Cards</li>
+<li><a href="https://github.com/Rafase282/My-FreeCodeCamp-Code/wiki/Lesson-Review-Counting-Cards">Lesson Review: Counting Cards</a></li>
 <li><a href="https://github.com/Rafase282/My-FreeCodeCamp-Code/wiki/Lesson-Build-JavaScript-Objects">Lesson: Build JavaScript Objects</a></li>
 <li><a href="https://github.com/Rafase282/My-FreeCodeCamp-Code/wiki/Lesson-Accessing-Objects-Properties-With-The-Dot-Operator">Lesson: Accessing Objects Properties with the Dot Operator</a></li>
 <li><a href="https://github.com/Rafase282/My-FreeCodeCamp-Code/wiki/Lesson-Accessing-Objects-Properties-With-Bracket-Notation">Lesson: Accessing Objects Properties with Bracket Notation</a></li>
@@ -296,7 +296,7 @@
 <li><a href="https://github.com/Rafase282/My-FreeCodeCamp-Code/wiki/Lesson-Introducing-Javascript-Object-Notation-Json">Lesson: Introducing JavaScript Object Notation (JSON)</a></li>
 <li><a href="https://github.com/Rafase282/My-FreeCodeCamp-Code/wiki/Lesson-Accessing-Nested-Objects-In-JSON">Lesson: Accessing Nested Objects in JSON</a></li>
 <li><a href="https://github.com/Rafase282/My-FreeCodeCamp-Code/wiki/Lesson-Accessing-Nested-Arrays-In-JSON">Lesson: Accessing Nested Arrays in JSON</a></li>
-<li>Lesson Review: Record Collection</li>
+<li><a href="https://github.com/Rafase282/My-FreeCodeCamp-Code/wiki/Lesson-Review-Record-Collection">Lesson Review: Record Collection</a></li>
 <li><a href="https://github.com/Rafase282/My-FreeCodeCamp-Code/wiki/Lesson-Iterate-with-JavaScript-For-Loops">Lesson: Iterate with JavaScript For Loops</a></li>
 <li><a href="https://github.com/Rafase282/My-FreeCodeCamp-Code/wiki/Lesson-Iterate-Odd-Numbers-With-a-For-Loop">Lesson: Iterate Odd Numbers With a For Loop</a></li>
 <li><a href="https://github.com/Rafase282/My-FreeCodeCamp-Code/wiki/Lesson-Count-Backwards-With-a-For-Loop">Lesson: Count Backwards With a For Loop</a></li>
