Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -1,42 +1,34 @@
-<!doctype html>
-<!-- The Time Machine GitHub pages theme was designed and developed by Jon Rohan, on Feb 7, 2012. -->
-<!-- Follow him for fun. http://twitter.com/jonrohan. Tail his code on https://github.com/jonrohan -->
+<!DOCTYPE html>
 <html>
-<head>
-  <meta charset="utf-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+  <head>
+    <meta charset='utf-8'>
+    <meta http-equiv="X-UA-Compatible" content="chrome=1">
 
-  <link rel="stylesheet" href="stylesheets/stylesheet.css" media="screen">
-  <link rel="stylesheet" href="stylesheets/github-dark.css">
-  <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
-  <script type="text/javascript" src="javascripts/script.js"></script>
+    <link rel="stylesheet" type="text/css" href="stylesheets/stylesheet.css" media="screen">
+    <link rel="stylesheet" type="text/css" href="stylesheets/github-dark.css" media="screen">
+    <link rel="stylesheet" type="text/css" href="stylesheets/print.css" media="print">
 
-  <title>My FreeCodeCamp Journal</title>
-  <meta name="description" content="My code from the bootcamp.">
+    <title>My FreeCodeCamp Journal by Rafase282</title>
+  </head>
 
-  <meta name="viewport" content="width=device-width,initial-scale=1">
+  <body>
 
-</head>
-
-<body>
-
-  <div class="wrapper">
     <header>
-      <h1 class="title">My FreeCodeCamp Journal</h1>
+      <div class="container">
+        <h1>My FreeCodeCamp Journal</h1>
+        <h2>My code from the bootcamp.</h2>
+
+        <section id="downloads">
+          <a href="https://github.com/Rafase282/My-FreeCodeCamp-Code/zipball/master" class="btn">Download as .zip</a>
+          <a href="https://github.com/Rafase282/My-FreeCodeCamp-Code/tarball/master" class="btn">Download as .tar.gz</a>
+          <a href="https://github.com/Rafase282/My-FreeCodeCamp-Code" class="btn btn-github"><span class="icon"></span>View on GitHub</a>
+        </section>
+      </div>
     </header>
-    <div id="container">
-      <p class="tagline">My code from the bootcamp.</p>
-      <div id="main" role="main">
-        <div class="download-bar">
-        <div class="inner">
-          <a href="https://github.com/Rafase282/My-FreeCodeCamp-Code/tarball/master" class="download-button tar"><span>Download</span></a>
-          <a href="https://github.com/Rafase282/My-FreeCodeCamp-Code/zipball/master" class="download-button zip"><span>Download</span></a>
-          <a href="https://github.com/Rafase282/My-FreeCodeCamp-Code" class="code">View My FreeCodeCamp Journal on GitHub</a>
-        </div>
-        <span class="blc"></span><span class="trc"></span>
-        </div>
-        <article class="markdown-body">
-          <h1>
+
+    <div class="container">
+      <section id="main_content">
+        <h1>
 <a id="welcome" class="anchor" href="#welcome" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Welcome</h1>
 
 <p>This repository is not for an app but more as a journal where I keep a record of everything I have done and learned from FreeCodeCamp. I decided to use a wiki as I can put more information easily on it. You will find my code there and also on the right directories if you just want to see the code.</p>
@@ -53,67 +45,6 @@
 <p><img src="https://avatars0.githubusercontent.com/Rafase282?&amp;s=128" alt="@Rafase282"></p>
 
 <p><a href="https://github.com/Rafase282">Github</a> | <a href="http://www.freecodecamp.com/rafase282">FreeCodeCamp</a> |  <a href="http://codepen.io/Rafase282/">CodePen</a> | <a href="https://www.linkedin.com/in/rafase282">LinkedIn</a> | <a href="https://rafase282.wordpress.com/">Blog/Site</a> | <a href="mailto:rafase282@gmail.com">E-Mail</a></p>
-
-<h1>
-<a id="quick-content" class="anchor" href="#quick-content" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Quick Content</h1>
-
-<h1>
-<a id="getting-started" class="anchor" href="#getting-started" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Getting Started</h1>
-
-<ol>
-<li><a href="https://github.com/Rafase282/My-FreeCodeCamp-Code/wiki#welcome">Welcome!</a></li>
-<li><a href="https://github.com/Rafase282/My-FreeCodeCamp-Code/wiki#contact-me">Contact</a></li>
-<li><a href="https://github.com/Rafase282/My-FreeCodeCamp-Code/wiki#get-started-with-free-code-camp">Get Started with Free Code Camp</a></li>
-</ol>
-
-<h1>
-<a id="front-end-development-certification" class="anchor" href="#front-end-development-certification" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Front End Development Certification</h1>
-
-<ol>
-<li><a href="https://github.com/Rafase282/My-FreeCodeCamp-Code/wiki#html5-and-css">HTML5 and CSS</a></li>
-<li><a href="https://github.com/Rafase282/My-FreeCodeCamp-Code/wiki#responsive-design-with-bootstrap">Responsive Design with Bootstrap</a></li>
-<li><a href="https://github.com/Rafase282/My-FreeCodeCamp-Code/wiki#gear-up-for-success">Gear up for Success</a></li>
-<li><a href="https://github.com/Rafase282/My-FreeCodeCamp-Code/wiki#jquery">jQuery</a></li>
-<li><a href="https://github.com/Rafase282/My-FreeCodeCamp-Code/wiki#basic-javascript">Basic JavaScript</a></li>
-<li><a href="https://github.com/Rafase282/My-FreeCodeCamp-Code/wiki#object-oriented-and-functional-programming">Object Oriented and Functional Programming</a></li>
-<li><a href="https://github.com/Rafase282/My-FreeCodeCamp-Code/wiki#basic-algorithm-scripting">Basic Algorithm Scripting</a></li>
-<li><a href="https://github.com/Rafase282/My-FreeCodeCamp-Code/wiki#basic-front-end-development-projects">Basic Front End Development Projects</a></li>
-<li><a href="https://github.com/Rafase282/My-FreeCodeCamp-Code/wiki#intermediate-algorithm-scripting">Intermediate Algorithm Scripting</a></li>
-<li><a href="https://github.com/Rafase282/My-FreeCodeCamp-Code/wiki#json-apis-and-ajax-">JSON APIs and Ajax</a></li>
-<li><a href="https://github.com/Rafase282/My-FreeCodeCamp-Code/wiki#intermediate-front-end-development-projects">Intermediate Front End Development Projects</a></li>
-<li><a href="https://github.com/Rafase282/My-FreeCodeCamp-Code/wiki#claim-your-front-end-development-certificate">Claim Your Front End Development Certificate</a></li>
-</ol>
-
-<h1>
-<a id="data-visualization-certification" class="anchor" href="#data-visualization-certification" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Data Visualization Certification</h1>
-
-<ol>
-<li><a href="https://github.com/Rafase282/My-FreeCodeCamp-Code/wiki#sass-">SASS</a></li>
-<li><a href="https://github.com/Rafase282/My-FreeCodeCamp-Code/wiki#react-">React</a></li>
-<li><a href="https://github.com/Rafase282/My-FreeCodeCamp-Code/wiki#react-projects-">React Projects</a></li>
-<li><a href="https://github.com/Rafase282/My-FreeCodeCamp-Code/wiki#d3-">D3</a></li>
-<li><a href="https://github.com/Rafase282/My-FreeCodeCamp-Code/wiki#data-visualization-projects-">Data Visualization Projects</a></li>
-<li><a href="https://github.com/Rafase282/My-FreeCodeCamp-Code/wiki#claim-your-data-visualization-certificate-">Claim Your Data Visualization Certificate</a></li>
-</ol>
-
-<h1>
-<a id="back-end-development-certification" class="anchor" href="#back-end-development-certification" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Back End Development Certification</h1>
-
-<ol>
-<li><a href="https://github.com/Rafase282/My-FreeCodeCamp-Code/wiki#upper-intermediate-algorithm-scripting">Upper Intermediate Algorithm Scripting</a></li>
-<li><a href="https://github.com/Rafase282/My-FreeCodeCamp-Code/wiki#automated-testing-and-debugging">Automated Testing and Debugging</a></li>
-<li><a href="https://github.com/Rafase282/My-FreeCodeCamp-Code/wiki#advanced-algorithm-scripting">Advanced Algorithm Scripting</a></li>
-<li><a href="https://github.com/Rafase282/My-FreeCodeCamp-Code/wiki#angularjs">AngularJS (Legacy Material)</a></li>
-<li><a href="https://github.com/Rafase282/My-FreeCodeCamp-Code/wiki#git">Git</a></li>
-<li><a href="https://github.com/Rafase282/My-FreeCodeCamp-Code/wiki#nodejs-and-expressjs">Node.js and Express.js</a></li>
-<li><a href="https://github.com/Rafase282/My-FreeCodeCamp-Code/wiki#mongodb">MongoDB</a></li>
-<li><a href="https://github.com/Rafase282/My-FreeCodeCamp-Code/wiki#api-projects">API Projects</a></li>
-<li><a href="https://github.com/Rafase282/My-FreeCodeCamp-Code/wiki#dynamic-web-applications">Dynamic Web Applications</a></li>
-<li><a href="https://github.com/Rafase282/My-FreeCodeCamp-Code/wiki#claim-your-full-stack-development-certificate">Claim Your Back End Development Certificate</a></li>
-</ol>
-
-<h1>
-<a id="sub-content" class="anchor" href="#sub-content" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Sub Content</h1>
 
 <h2>
 <a id="get-started-with-free-code-camp" class="anchor" href="#get-started-with-free-code-camp" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Get Started with Free Code Camp</h2>
@@ -379,6 +310,7 @@
 <li><a href="https://github.com/Rafase282/My-FreeCodeCamp-Code/wiki/Lesson-Find-Numbers-with-Regular-Expressions">Lesson: Find Numbers with Regular Expressions</a></li>
 <li><a href="https://github.com/Rafase282/My-FreeCodeCamp-Code/wiki/Lesson-Find-Whitespace-with-Regular-Expressions">Lesson: Find Whitespace with Regular Expressions</a></li>
 <li><a href="https://github.com/Rafase282/My-FreeCodeCamp-Code/wiki/Lesson-Invert-Regular-Expression-Matches-with-JavaScript">Lesson: Invert Regular Expression Matches with JavaScript</a></li>
+<li><a href="https://github.com/Rafase282/My-FreeCodeCamp-Code/wiki/Lesson-Review-Profile-Lookup">Lesson Review: Profile Lookup</a></li>
 </ol>
 
 <h3>
@@ -756,27 +688,10 @@
 <ol>
 <li>My Full Stack Development Certificate</li>
 </ol>
-        </article>
-      </div>
+      </section>
     </div>
-    <footer>
-      <div class="owner">
-      <p><a href="https://github.com/Rafase282" class="avatar"><img src="https://avatars0.githubusercontent.com/u/285138?v=3&amp;s=60" width="48" height="48"></a> <a href="https://github.com/Rafase282">Rafase282</a> maintains <a href="https://github.com/Rafase282/My-FreeCodeCamp-Code">My FreeCodeCamp Journal</a></p>
 
-
-      </div>
-      <div class="creds">
-        <small>This page generated using <a href="https://pages.github.com/">GitHub Pages</a><br>theme by <a href="https://twitter.com/jonrohan/">Jon Rohan</a></small>
-      </div>
-    </footer>
-  </div>
-  <div class="current-section">
-    <a href="#top">Scroll to top</a>
-    <a href="https://github.com/Rafase282/My-FreeCodeCamp-Code/tarball/master" class="tar">tar</a><a href="https://github.com/Rafase282/My-FreeCodeCamp-Code/zipball/master" class="zip">zip</a><a href="" class="code">source code</a>
-    <p class="name"></p>
-  </div>
-
-            <script type="text/javascript">
+              <script type="text/javascript">
             var gaJsHost = (("https:" == document.location.protocol) ? "https://ssl." : "http://www.");
             document.write(unescape("%3Cscript src='" + gaJsHost + "google-analytics.com/ga.js' type='text/javascript'%3E%3C/script%3E"));
           </script>
@@ -787,5 +702,5 @@
             } catch(err) {}
           </script>
 
-</body>
+  </body>
 </html>
